# mcp-bedrock-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflow/: static-check.yml
.github/workflows/: gitleaks-scan.yml  static-check.yml  vulnerability-scan.yml
src/: main.py
src/mcp_bc/: repl.py
src/mcpapp/: __init__.py  agent.py  client.py  repl.py
src/mcpapp/agent/: __init__.py  action.py  agent.py  interface.py  message.py  tool_config.py
tests/: test_agent.py
