[project]
name = "mcp-bedrock-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.34,<2.0",
    "boto3-stubs[bedrock-runtime]>=1.37.34,<2.0",
    "mcp>=1.6.0,<2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0",
    "ruff>=0.11.5,<1.0",
]
repl = [
    "prompt-toolkit>=3.0.50,<4.0",
]

[tool.ruff]
exclude = [".venv"]
line-length = 88
indent-width = 4

lint.select = ["E", "W", "F", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
